SERVER-29293 Recipient shard to abort migration on stepdown

(cherry picked from commit 6d921f47c0fcb29266c57286f1dd0d411cc459f0)