src/mongo/db/s/migration_destination_manager.cpp
@@ -148,10 +148,14 @@ bool opReplicatedEnough(OperationContext* txn,
                         const repl::OpTime& lastOpApplied,
                         const WriteConcernOptions& writeConcern) {
     WriteConcernResult writeConcernResult;
+    writeConcernResult.wTimedOut = false;
 
-    Status waitForMajorityWriteConcernStatus =
+    Status majorityStatus =
         waitForWriteConcern(txn, lastOpApplied, kMajorityWriteConcern, &writeConcernResult);
-    if (!waitForMajorityWriteConcernStatus.isOK()) {
+    if (!majorityStatus.isOK()) {
+        if (!writeConcernResult.wTimedOut) {
+            uassertStatusOK(majorityStatus);
+        }
         return false;
     }
 
@@ -159,13 +163,16 @@ bool opReplicatedEnough(OperationContext* txn,
     // write concerns in case the user's write concern is stronger than majority
     WriteConcernOptions userWriteConcern(writeConcern);
     userWriteConcern.wTimeout = -1;
+    writeConcernResult.wTimedOut = false;
 
-    Status waitForUserWriteConcernStatus =
+    Status userStatus =
         waitForWriteConcern(txn, lastOpApplied, userWriteConcern, &writeConcernResult);
-    if (!waitForUserWriteConcernStatus.isOK()) {
+    if (!userStatus.isOK()) {
+        if (!writeConcernResult.wTimedOut) {
+            uassertStatusOK(userStatus);
+        }
         return false;
     }
-
     return true;
 }
 
